Changes "Experiences" to "Experience"

--- a/src/MainContent/Home/Home.css
+++ b/src/MainContent/Home/Home.css
@@ -5,9 +5,14 @@
     filter: drop-shadow(1px 1px 5px hsl(0, 0%, 75%));
 }
 
-@media (min-width: 768px) {
+@media (min-width: 800px) {
     .main-image {
         height: 500px;
         width: 500px;
     }
+}
+
+/* Add a class for the colored link */
+.color-link {
+    color: #336dff; /* or your preferred color code */
 }
