--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,8 @@ body {
 
 a {
   text-decoration: none !important;
-  color: inherit !important;
+  color: inherit;
+  /*color: inherit !important;*/
 }
 
 .clickable {
