--- a/src/MainContent/Experience/BoxWithImage.css
+++ b/src/MainContent/Experience/BoxWithImage.css
@@ -15,11 +15,11 @@
     flex-wrap: wrap;
     /*    justify-content: space-evenly;    */
     justify-content: center;
-    padding: 0px 15px;
+    padding: 0 15px;
 }
 
 .card-shadow{
-    width: 320px;
+    width: 330px;
     height: 300px;
     justify-content: center;
     align-items: center;
