--- a/src/MainContent/Experience/BoxWithImage.css
+++ b/src/MainContent/Experience/BoxWithImage.css
@@ -19,8 +19,8 @@
 }
 
 .card-shadow{
-    width: 330px;
-    height: 300px;
+    width: 310px;
+    height: 310px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -30,8 +30,8 @@
 }
 
 .card{
-    width: 330px;
-    height: 300px;
+    width: 310px;
+    height: 310px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -48,8 +48,8 @@
 
 .card-image-container{
     /*    filter: brightness(70%);*/
-    width: 330px;
-    height: 300px;
+    width: 310px;
+    height: 310px;
     /*    border-radius: 15px;*/
 }
 
@@ -85,4 +85,8 @@
     transform: translate(-50%, -50%);
     font-size: 16px;
     width: 240px;
+}
+
+.card-title {
+    font-size: 23px;
 }
