--- a/src/MainContent/Experience/BoxWithImage.css
+++ b/src/MainContent/Experience/BoxWithImage.css
@@ -34,7 +34,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    border-radius: 15px; /* auto edw to gamidi*/
+    border-radius: 15px !important; /* auto edw to gamidi*/
     position: relative;
     color: black;
     transition: .3s;
