--- a/src/MainContent/Projects/BoxWithImage_projects.css
+++ b/src/MainContent/Projects/BoxWithImage_projects.css
@@ -119,6 +119,17 @@
     filter: opacity(40%);
 }
 
+#zebro{
+    position: absolute;
+    width: auto;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    filter: opacity(40%);
+}
+
 #dual_slip-container{
      background-color: black;
  }
